# QM_2017_SSS_Team2

./: .gitignore  .travis.yml  README.md  setup.py
jk_comp/: CMakeLists.txt  jk_build.cpp  jk_comp.py
qm2/: __init__.py  math.py  scf.py
tests/: test_data.py  test_math.py  test_mymath.py  test_scf.py
